--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ header {
   text-align: center;
 }
 footer {
-  background-color: #f6efe7 !important;
+  background-color: #f6efe7;
 }
 body {
   padding-top: 100px;
@@ -23,7 +23,7 @@ img {
   height: 50px;
 }
 .link {
-  margin: 10px 20px;
+  margin: 10px;
 }
 .content {
   height: calc(100vh - 300px);
@@ -31,10 +31,10 @@ img {
 .answer {
   margin-top: 20px;
 }
-/*form*/
-.orange-text {
+.title-text {
   color: #F0831E;
 }
+/*inquiry form*/
 .inline {
   display: inline;
 }
