--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ input {
   border: 1px solid #ddd;
   box-shadow: 0px 0px 3px #d3d3d3;
 }
-.btn_contact > input {
+.btn {
   height: 50px;
   line-height: 50px;
   width: 200px;
